--- a/public/styles/theme.css
+++ b/public/styles/theme.css
@@ -31,6 +31,14 @@
     @apply bg-light-700 dark:bg-dark-300;
   }
 
+  .background-light800_dark400 {
+    @apply bg-light-800 dark:bg-dark-400;
+  }
+
+  .background-light800_dark300 {
+    @apply bg-light-800 dark:bg-dark-300 !important;
+  }
+
   .text-dark100_light900 {
     @apply text-dark-100 dark:text-light-900 !important;
   }
@@ -77,6 +85,10 @@
 
   .text-dark400_light900 {
     @apply text-dark-400 dark:text-light-900 !important;
+  }
+
+  .text-light400_light500 {
+    @apply text-light-400 dark:text-light-500 !important;
   }
 
   .light-border {
@@ -164,7 +176,7 @@
   }
 
   .placeholder {
-    @apply placeholder:text-light-400 dark:placeholder:text-light-700;
+    @apply placeholder:text-light-400 dark:placeholder:text-light-500;
   }
 
   .invert-colors {
@@ -185,7 +197,11 @@
 
   .dark-gradient {
     background: linear-gradient(232deg,
-      rgba(23, 28, 35, 0.41) 0%,
-      rgba(19, 22, 28, 0.7) 100%);
+        rgba(23, 28, 35, 0.41) 0%,
+        rgba(19, 22, 28, 0.7) 100%);
+  }
+
+  .border-border {
+    @apply border-2 border-solid border-gray-300;
   }
 }
