--- a/app/globals.css
+++ b/app/globals.css
@@ -56,7 +56,7 @@ body {
 
 
   .no-focus {
-    @apply focus-visible:ring-0 focus-visible:ring-transparent focus
+    @apply focus-visible:ring-0 focus-visible:ring-transparent focus-visible:ring-offset-0 !important
   }
 }
 
